Added group activity component with stubby data

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Music player</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
-  <div id="app" class="app-container">
-    <div class="main-view"></div>
-    <div class="sidebar-view"></div>
-  </div>
+  <div id="app"></div>
   <script src="app.js"></script>
 </body>
 </html>
