--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Music player</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto:500,400,300,100&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
