--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#6c71c4">
+  <meta name="theme-color" content="#8386B9">
   <title>Music player</title>
   <link rel="manifest" href="/manifest.json">
   <link href='http://fonts.googleapis.com/css?family=Roboto:500,400,300,100&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
